[package]
name = "babyjubjub-rs"
version = "0.0.10"
authors = ["arnaucube <root@arnaucube.com>"]
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/arnaucube/babyjubjub-rs"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ff = { package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
num = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.8"
blake-hash = { version = "0.4.0", optional = true }
blake = { version = "2.0.1", optional = true }
generic-array = "0.14"
bloock-poseidon-rs = "0.1.5"
arrayref = "0.3.5"
lazy_static = "1.4.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"
wasm-bindgen-test = "0.2"

[[bench]]
name = "bench_babyjubjub"
harness = false

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
blake-hash = { version = "0.4.0" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
blake = { version = "2.0.1" }

[profile.dev]
opt-level = 1
incremental = true
