[package]
name = "bloock-babyjubjub-rs"
version = "0.0.11"
authors = ["arnaucube <root@arnaucube.com>", "Marc Baqué <marc@bloock.com>"]
edition = "2021"
license = "GPL-3.0"
description = "BabyJubJub elliptic curve implementation"
repository = "https://github.com/bloock/babyjubjub-rs"
readme = "README.md"

[dependencies]
ff = { package = "ff_ce", version = "0.13", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
num = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.8"
blake-hash = { version = "0.4.0", optional = true }
blake = { version = "2.0.1", optional = true }
generic-array = "0.14"
bloock-poseidon-rs = "0.1.5"
arrayref = "0.3.5"
lazy_static = "1.4.0"
bloock-blake-rs = "0.1.0"

[dev-dependencies]
criterion = "0.3"
hex = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.32"

[[bench]]
name = "bench_babyjubjub"
harness = false

[profile.dev]
opt-level = 1
incremental = true
